Bug 336478 - Cloned array layer reset to original parent position after Converting to PaintLayer
Summary: Cloned array layer reset to original parent position after Converting to Pain...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-19 20:03 UTC by vanyossi
Modified: 2014-06-20 09:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Cloned array test file (483.36 KB, application/x-krita)
2014-06-19 20:04 UTC, vanyossi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vanyossi 2014-06-19 20:03:26 UTC
Converting  cloned layers to PaintLayers, created with Clone arrays,  resets layer position to parent position

This happens even if I have manually move the cloned layer to another position.

To avoid this I have to get the layer inside a group layer and convert the group layer to paint layer instead.

Reproducible: Always

Steps to Reproduce:
1. Create a clone array
2. Select one clone and convert to PaintLayer
3. Layer will vanish as it is now below/above original source cloned layer.


Expected Results:  
Bake cloned layer in current position.
Comment 1 vanyossi 2014-06-19 20:04:47 UTC
Created attachment 87299 [details]
Cloned array test file

Attached test file for bug.
Comment 2 Dmitry Kazakov 2014-06-20 07:36:31 UTC
Confirmed
Comment 3 Dmitry Kazakov 2014-06-20 09:36:23 UTC
Git commit e5a116b5b423a3c22045a2851e219702d63d2ccf by Dmitry Kazakov.
Committed on 20/06/2014 at 09:35.
Pushed by dkazakov into branch 'master'.

Fix convertion of clone layers into paint layers and selection masks

Also add a unittest for that

M  +1    -0    krita/image/kis_mask.cc
M  +3    -3    krita/sdk/tests/ui_manager_test.h
M  +2    -2    krita/ui/kis_layer_manager.cc
M  +1    -1    krita/ui/kis_node_manager.cpp
A  +-    --    krita/ui/tests/data/node_manager_test/initial_with_selection_with_shape/initial_with_selection_with_shape_clone1_paintDevice.png
A  +7    -0    krita/ui/tests/data/node_manager_test/initial_with_selection_with_shape/readme.txt
A  +-    --    krita/ui/tests/data/node_manager_test/selection_from_blur_layer_Selection 1_paintDevice.png
A  +-    --    krita/ui/tests/data/node_manager_test/selection_from_clone_layer_Selection 1_paintDevice.png
M  +91   -0    krita/ui/tests/kis_node_manager_test.cpp
M  +5    -0    krita/ui/tests/kis_node_manager_test.h

http://commits.kde.org/calligra/e5a116b5b423a3c22045a2851e219702d63d2ccf