Fix convertion of clone layers into paint layers and selection masks

Also add a unittest for that

BUG:336478